[project]
name = "resolve-triage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "univers>=31.1.0",
]

[project.scripts]
resolve-triage = "resolve_triage:main"

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"
