[package]
name = "resolve"
build = "src/build.rs"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
cc = "1.2.63"
env_logger = "0.11.8"
libc = "0.2.174"
log = "0.4.29"

[profile.release]
panic = "abort"
debug = true
overflow-checks = true

[profile.dev]
panic = "abort"
overflow-checks = true
